# force-bridge-btc

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  capsule.toml
.github/workflows/: ci.yml
cli/: Cargo.toml  Makefile  README.md
cli/examples/: demo.rs
cli/src/: cell_collector.rs  generator.rs  indexer.rs  lib.rs  main.rs  tx_helper.rs  util.rs
cli/src/commands/: contract.rs  mod.rs  server.rs  sudt.rs  types.rs
cli/src/server/: rpc.rs
contracts/toCKB/: Cargo.toml
contracts/toCKB-lockscript/: Cargo.toml
contracts/toCKB-lockscript/src/: main.rs
contracts/toCKB-lockscript/src/utils/: error.rs
contracts/toCKB-typescript/: Cargo.toml
contracts/toCKB-typescript/btc/: Cargo.toml
contracts/toCKB-typescript/btc/src/: lib.rs
contracts/toCKB-typescript/eth/: Cargo.toml
contracts/toCKB-typescript/eth/src/: lib.rs
contracts/toCKB-typescript/src/: external_verify.rs  internal_verify.rs  main.rs  switch.rs
contracts/toCKB-typescript/src/switch/: mod.rs
contracts/toCKB-typescript/src/switch/atterm_redeem/: mod.rs
contracts/toCKB-typescript/src/switch/auction_faulty_redeeming/: mod.rs
contracts/toCKB-typescript/src/switch/auction_faulty_warranty/: mod.rs
contracts/toCKB-typescript/src/switch/auction_signertimeout/: mod.rs
contracts/toCKB-typescript/src/switch/auction_undercollateral/: mod.rs
contracts/toCKB-typescript/src/switch/bonding/: mod.rs
contracts/toCKB-typescript/src/switch/deposit_request/: mod.rs
contracts/toCKB-typescript/src/switch/liquidation_faulty_redeeming/: mod.rs
contracts/toCKB-typescript/src/switch/liquidation_faulty_warranty/: mod.rs
contracts/toCKB-typescript/src/switch/liquidation_signertimeout/: mod.rs
contracts/toCKB-typescript/src/switch/liquidation_undercollateral/: mod.rs
contracts/toCKB-typescript/src/switch/mint_xt/: mod.rs
contracts/toCKB-typescript/src/switch/pre_undercollateral_redeem/: mod.rs
contracts/toCKB-typescript/src/switch/preterm_redeem/: mod.rs
contracts/toCKB-typescript/src/switch/withdraw_collateral/: mod.rs
contracts/toCKB-typescript/src/switch/withdraw_pledge/: mod.rs
contracts/toCKB-typescript/src/switch/withdraw_pledge_collateral/: mod.rs
contracts/toCKB-typescript/src/utils/: common.rs  config.rs  mod.rs  tools.rs  tools.rs.bak  transaction.rs  verifier.rs
contracts/toCKB-typescript/src/utils/types/: error.rs  mod.rs  toCKB_cell.rs
contracts/toCKB-typescript/src/utils/types/schemas/: basic.mol  btc_difficulty.mol  mint_xt_witness.mol  toCKB_cell_data.mol
contracts/toCKB-typescript/types/: Cargo.toml
contracts/toCKB-typescript/types/src/: lib.rs
docker/: docker-compose.yml
docker/bitcoin/: bitcoin.conf  entrypoint.sh  miner.sh
docs/: demo_CN.md  design.md  run-demo-on-local-dev-chain.md
sdk/: Cargo.toml  README.md
sdk/examples/: demo.rs
sdk/src/: cell_collector.rs  generator.rs  lib.rs  main.rs  tx_helper.rs  util.rs
sdk/src/commands/: contract.rs  mod.rs  types.rs
tests/: Cargo.toml
tests/src/: lib.rs  tests.rs
tests/src/toCKB_lockscript/: mod.rs
tests/src/toCKB_lockscript/tests/: mod.rs
tests/src/toCKB_lockscript/utils/: mod.rs
tests/src/toCKB_typescript/tests/: atterm_redeem.rs  auction_faulty_redeeming.rs  auction_faulty_warranty.rs  auction_signertimeout.rs  auction_undercollateral.rs  bonding.rs  deposit_request.rs  liquidation_faulty_redeeming.rs  liquidation_faulty_warranty.rs  liquidation_signertimeout.rs  liquidation_undercollateral.rs  mint_xt.rs  mod.rs  pre_undercollateral_redeem.rs  preterm_redeem.rs  withdraw_collateral.rs  withdraw_pledge.rs  withdraw_pledge_collateral.rs
tests/src/toCKB_typescript/tests/mint_xt/: helper.rs  mod.rs  types.rs
tests/src/toCKB_typescript/tests/mint_xt_2/: helper.rs  mod.rs
tests/src/toCKB_typescript/tests/withdraw_collateral/: helper.rs  mod.rs  types.rs
tests/src/toCKB_typescript/utils/: case_builder.rs  case_runner.rs  config.rs  helper.rs  mod.rs  test_case.rs
tests/src/toCKB_typescript/utils/types/: convert.rs  mod.rs  test_case.rs
tools/btc-proof-generator/: Cargo.toml
tools/btc-proof-generator-by-rpc/: Cargo.toml  README.md
tools/btc-proof-generator-by-rpc/src/: cli.toml  main.rs  utils.rs
tools/btc-proof-generator/src/: main.rs
tools/btc_proof_generator/: Cargo.toml  README.md
tools/btc_proof_generator/src/: cli.yaml  main.rs
types/: Cargo.toml  Makefile
types/schemas/: basic.mol  eth_header_cell_data.mol  mint_xt_witness.mol  tockb_cell_data.mol
types/src/: config.rs  convert.rs  error.rs  lib.rs  tockb_cell.rs
