[package]
name = "tockb-cli"
version = "0.1.0"
authors = ["huwenchao <me@huwenchao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tockb-sdk = { path = "../sdk" }
env_logger = "0.7.1"
clap = "3.0.0-beta.1"
int-enum = "0.4"
toml = "0.5"
config = "0.10"
hex = "0.4"
anyhow = "1.0"
tockb-types = { path = "../types" }
molecule = "0.6"
secp256k1 = "0.22.2"
reqwest = "^0.9"
log = "0.4"
failure = "0.1.5"
ckb-sdk = { git = "https://github.com/nervosnetwork/ckb-cli", tag = "v0.36.0" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2" }
ckb-crypto = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.36.0-rc2", features = ["secp"] }
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
jsonrpc-core = "15.0"
jsonrpc-http-server = "15.0"
jsonrpc-derive = "15.0"
jsonrpc-core-client  = "15.0"