[package]
name = "tockb-sdk"
version = "0.1.0"
authors = ["huwenchao <me@huwenchao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
ckb-sdk = { git = "https://github.com/nervosnetwork/ckb-cli.git", tag = "v0.35.0"}
ckb-cli = { git = "https://github.com/nervosnetwork/ckb-cli.git", tag = "v0.35.0"}
tockb-types = { path = "../types" }