[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-tool = { git = "https://github.com/jjyr/ckb-tool.git", tag = "v0.1.3" }
ckb-testtool = { git = "https://github.com/jjyr/ckb-tool.git", tag = "v0.1.3" }
molecule = { version = "0.7", default-features = false }
int-enum = { version = "0.4", default-features = false }
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
hex = "0.4"
primitive-types = { version = "0.7.2", default-features = false }
tockb-types = { path = "../types" }
