[package]
name = "toCKB-typescript"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ckb-std = "0.6"
# ckb-std = { path = "/code/deps/ckb-std" }
ckb-std = { git = "https://github.com/nervosnetwork/ckb-std.git", branch = "master" }
molecule = { version = "=0.6.0", default-features = false }
int-enum = { version = "0.4", default-features = false }
bitcoin-spv = { git = "https://github.com/summa-tx/bitcoin-spv.git", branch = "rust/dep-change", default-features = false }
bech32 = { git = "https://github.com/reuvenpo/rust-bech32.git", branch = "support-no_std", default-features = false }
primitive-types = { version = "0.7.2", default-features = false }

[profile.release]
overflow-checks = true
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
